--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "^16.7.8",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-html-parser": "^2.0.2",
     "@types/react-router-dom": "^5.1.8",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
